SC - fixed editable combo and added isVisibleAttribute property on visibility settings
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/unionvms-web@9513 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/app/directive/common/combobox/combobox.less
+++ b/app/directive/common/combobox/combobox.less
@@ -60,7 +60,7 @@
 		    cursor: pointer;
 			overflow-y: hidden;
     		height: 30px;
-			padding: 0 20px 0 12px;
+			padding: 0 0 0 12px;
 	    	position: relative;
 	    	border: 1px solid #c2c9cc;
 	    	box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.09);
@@ -68,7 +68,7 @@
 	    	    cursor: pointer;
 	    		border: 0;
 	    		display: inline-block;
-	    		padding: 3px 0;
+	    		padding: 3px 20px 3px 0;
 	    		height: 26px;
 	    	}
 	    	.caret {
