--- a/app/partial/spatial/configurations/visibilitySettings/visibilitySettings.less
+++ b/app/partial/spatial/configurations/visibilitySettings/visibilitySettings.less
@@ -7,6 +7,29 @@
 		margin-bottom: 10px;
 	}
 	
+	.is-attr-visible-row {
+		position: relative;
+	    line-height: 40px;
+	    height: 40px;
+	    color: #777;
+	    input[type="checkbox"],
+	    span {
+	    	position: absolute;
+	    }
+	    input[type="checkbox"] {
+	    	top: 10px;
+	    	right: 8px;
+	    }
+	    span {
+		    left: 8px;
+		    font-size: 15px;
+	    }
+	}
+	
+	ul[dnd-list] {
+    	border-bottom: 3px solid #bebebe;
+    }
+	
 	table {
 		border: 0;
     	th {
